<resources>
    <string name="app_name">E-Reader</string>
    <string name="lorem_ipsum" > Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley
        of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
        sheets containing Lorem Ipsum passages. </string>
    <string name="lorem_ipsum_random">NLorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
        sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
        versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley
        of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
        versions of Lorem Ipsum</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="motivation">Motivation</string>
    <string name="star_rate">4.2</string>
    <string name="reviews_count">2932 reviews</string>
    <string name="story_title">Do It Today</string>
    <string name="author_name">Darius Foroux</string>
    <string name="pages">Pages</string>
    <string name="pages_count">240</string>
    <string name="category">Category</string>
    <string name="read_now">Read Now</string>
    <string name="serif">Serif</string>
    <string name="mono">Mono</string>
    <string name="text_default">Default</string>
    <string name="theme">Theme</string>
    <string name="style">Style</string>
    <string name="dark_mode">Dark Mode</string>
</resources>