<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@android:color/transparent"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@drawable/bottomsheet_bg">

        <TextView
            android:id="@+id/text_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical|end"
            android:text="@string/star_rate"
            android:textSize="14sp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/lusitana_regular"
            app:drawableEndCompat="@drawable/baseline_star_rate_24"
            app:layout_constraintEnd_toStartOf="@+id/review_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/review_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/reviews_count"
            android:textSize="11sp"
            android:fontFamily="@font/lusitana_regular"
            app:layout_constraintBottom_toBottomOf="@+id/text_rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_rating"
            app:layout_constraintTop_toTopOf="@+id/text_rating" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/story_title"
            android:fontFamily="@font/lusitana_700"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/review_count"
            app:layout_constraintStart_toEndOf="@+id/text_rating"
            app:layout_constraintTop_toBottomOf="@+id/review_count" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/author_name"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/lusitana_regular"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/pages"
            android:fontFamily="@font/lusitana_regular"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/text_rating"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pages_count"
            android:fontFamily="@font/lusitana_700"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="14sp"
            android:fontFamily="@font/lusitana_regular"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/review_count"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motivation"
            android:fontFamily="@font/lusitana_700"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sinopsis"
            android:textSize="14sp"
            android:fontFamily="@font/lusitana_regular"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/text_story_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintBottom_toTopOf="@+id/btn_read_now"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_read_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/read_now"
            android:textAllCaps="false"
            app:cornerRadius="25dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:fontFamily="@font/lusitana_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/textView6" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#FAF0F0"
            app:cardCornerRadius="100dp"
            app:contentPadding="8dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="@+id/text_story_content"
            app:layout_constraintTop_toTopOf="@+id/btn_read_now">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_more_horiz_24" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
